--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <service android:name=".Geofencing"/>
+
         <!--API KEY-->
         <meta-data
             android:name="com.google.android.get.API_KEY"
